docs-archive/apache-airflow-providers-google/6.0.0/_sources/_api/airflow/providers/google/suite/sensors/drive/index.rst.txt
:mod:`airflow.providers.google.suite.sensors.drive`
===================================================

.. py:module:: airflow.providers.google.suite.sensors.drive

.. autoapi-nested-parse::

   This module contains Google Drive sensors.



Module Contents
---------------

.. py:class:: GoogleDriveFileExistenceSensor(*, folder_id: str, file_name: str, drive_id: Optional[str] = None, gcp_conn_id: str = 'google_cloud_default', delegate_to: Optional[str] = None, impersonation_chain: Optional[Union[str, Sequence[str]]] = None, **kwargs)

   Bases: :class:`airflow.sensors.base.BaseSensorOperator`

   Checks for the existence of a file in Google Cloud Storage.

   :param folder_id: The Google drive folder where the file is.
   :type folder_id: str
   :param file_name: The name of the file to check in Google Drive
   :type file_name: str
   :param drive_id: Optional. The id of the shared Google Drive in which the file resides.
   :type drive_id: str
   :param gcp_conn_id: The connection ID to use when
       connecting to Google Cloud Storage.
   :type gcp_conn_id: str
   :param delegate_to: The account to impersonate using domain-wide delegation of authority,
       if any. For this to work, the service account making the request must have
       domain-wide delegation enabled.
   :type delegate_to: str
   :param impersonation_chain: Optional service account to impersonate using short-term
       credentials, or chained list of accounts required to get the access_token
       of the last account in the list, which will be impersonated in the request.
       If set as a string, the account must grant the originating account
       the Service Account Token Creator IAM role.
       If set as a sequence, the identities from the list must grant
       Service Account Token Creator IAM role to the directly preceding identity, with first
       account from the list granting this role to the originating account (templated).
   :type impersonation_chain: Union[str, Sequence[str]]

   .. attribute:: template_fields
      :annotation: = ['folder_id', 'file_name', 'drive_id', 'impersonation_chain']

      

   .. attribute:: ui_color
      :annotation: = #f0eee4

      

   
   .. method:: poke(self, context: dict)




